[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/art/store.png" type="Texture" id=1]
[ext_resource path="res://scripts/Store.gd" type="Script" id=2]
[ext_resource path="res://assets/art/ping.png" type="Texture" id=3]

[node name="Store" type="Node2D"]
position = Vector2( 417.99, 5585.06 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionArea" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CollisionArea"]
polygon = PoolVector2Array( -33.9445, 60.9624, 48.0757, 60.2671, 42.515, -52.3364, -43.3282, -51.9893 )

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="InteractionArea"]
polygon = PoolVector2Array( -145.506, -176.059, -151.414, 220.835, 233.664, 206.934, 234.359, -181.62 )

[node name="PingSprite" type="Sprite" parent="."]
position = Vector2( 4.69626, -104.882 )
texture = ExtResource( 3 )

[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
